<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:padding="24dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                android:textColor="?colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:text="@string/blocked_numbers"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/md_grey"
                android:visibility="invisible"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBlockedNumbers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="false"
                android:paddingHorizontal="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="100dp"
                tools:itemCount="14"
                tools:listitem="@layout/rv_blocked_number"
                tools:visibility="visible" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingHorizontal="48dp"
        android:text="@string/info_no_results"
        android:textColor="@color/lt_grey"
        tools:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="24dp"
        android:text="@string/add_new"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/dk_red"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconTint="@color/white"
        app:iconSize="18dp"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>