<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="48dp"
        android:paddingBottom="36dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:text="@string/add_new"
            android:textColor="?colorControlNormal"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPickFromContacts"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:icon="@drawable/ic_baseline_account_circle_24"
            app:iconGravity="end"
            app:iconSize="18dp"
            app:iconTint="?colorControlNormal"
            android:textColor="?colorControlNormal"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/tvTitle"
            app:layout_constraintTop_toTopOf="@id/tvTitle" /><!--
            app:iconTint="@color/teal_700"
            android:textColor="@color/teal_700"-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/info_add_new_number"
            app:boxStrokeErrorColor="@color/md_red"
            app:errorEnabled="true"
            app:errorIconTint="@color/md_red"
            app:errorTextColor="@color/md_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/contacts"
            android:text="@string/block"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:iconSize="18dp"
            app:backgroundTint="@color/dk_red"
            app:icon="@drawable/ic_baseline_phone_disabled_24"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilNumber"
            app:tint="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>